non_executable_reasons_record_from_random_10k/5732.txt
3.5
An error occurred while executing the following cell:
------------------
dist, pred = floydwarshall(diction)
only_d = [l for key in dist.keys() for l in dist[key].values() if l < 1000]
max(only_d)calc
------------------

[0;36m  File [0;32m"<ipython-input-9-14a37cc5adec>"[0;36m, line [0;32m3[0m
[0;31m    max(only_d)calc[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-9-14a37cc5adec>, line 3)

Executability                            : False
